--- a/FAQ.html
+++ b/FAQ.html
@@ -28,6 +28,8 @@
           <div style="display: inline-block;">
             <a href="Cart.html" class="menu_cart"> 
               <div style="display: inline-block;" > 
+                <div class="cart-cont-num hidden">
+                </div> 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
                 Корзина 
@@ -223,6 +225,9 @@
 
   </footer>
 </div>        
+
+    <!-- scripts -->
+ <script src="js/cart.js"></script>
 
 
 </body>
