--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
           <div style="display: inline-block;">
             <a href="cart.html" class="menu_cart"> 
               <div style="display: inline-block;" > 
+                <div class="cart-cont-num hidden">
+                </div> 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
-                Корзина 
+
+                Корзина
+                
               </div>  
             </a> 
             </div>
